📖 Integrate JVM variables justification into README
- Added comprehensive JVM Configuration & Optimization section
- Included all JVM variables with detailed justifications
- Added performance impact analysis and benchmarks
- Included security considerations and troubleshooting
- Added configuration examples for different environments
- Updated Table of Contents to include new section
- Removed separate JVM_VARIABLES_JUSTIFICATION.md file
- Everything now consolidated in single comprehensive README

✅ Complete documentation in one place - README.md